--- a/零基础入门旷视天元MegEngine/1.旷视天元MegEngine介绍和快速上手.md
+++ b/零基础入门旷视天元MegEngine/1.旷视天元MegEngine介绍和快速上手.md
@@ -10,12 +10,34 @@
 * 深度学习和MegEngine编程中的张量、算子、反向传播和自动求导等相关基本概念介绍；
 * 如何利用公开项目和社区等资源快速开启深度学习之旅。
 
-## PPT
+## PPT地址
 
+[1.旷视天元MegEngine介绍和快速上手.pptx](./PPT合集/1.旷视天元MegEngine介绍和快速上手.pptx)
 
 ## 视频地址
 
+待补充
 
 ## 作业
 
+从MegStudio的公开项目中Fork一个项目并运行。
+
+1. 关注：https://github.com/MegEngine/MegEngine
+2. 安装MegEngine
+3. 注册和试用MegStudio
+4. 从MegStudio的公开项目中Fork一个项目并运行
+
+### 如何提交
+
+将 MegStudio 运行成功的截图及个人信息发送到邮箱：mgesupport@megvii.com
+
+**邮件标题：** 天元入门第一次课程作业
+
+**邮件内容**
+
+* 截图
+* 姓名：
+* 学校（公司）：
+* 电话：
+* 邮寄地址：
 
