--- a/零基础入门旷视天元MegEngine/2.模型构建和训练入门.md
+++ b/零基础入门旷视天元MegEngine/2.模型构建和训练入门.md
@@ -12,7 +12,7 @@
 
 ## PPT地址
 
-[2.模型构建和训练入门课件.pdf](./零基础入门旷视天元MegEngine/PPT合集/2.模型构建和训练入门课件.pdf)
+[2.模型构建和训练入门课件.pdf](./PPT合集/2.模型构建和训练入门课件.pdf)
 
 ## 视频地址
 
