--- a/零基础入门旷视天元MegEngine/2.模型构建和训练入门.md
+++ b/零基础入门旷视天元MegEngine/2.模型构建和训练入门.md
@@ -12,11 +12,12 @@
 
 ## PPT地址
 
-[2.模型构建和训练入门课件.pdf](./PPT合集/2.模型构建和训练入门课件.pdf)
+[2.模型构建和训练入门课件.pdf](./PPT合集/2.模型构建和训练入门课件.pdf)<br/>
+[2.模型构建和训练入门.ipynb](./PPT合集/2.模型构建和训练入门.ipynb)
 
 ## 视频地址
 
-待补充
+https://www.bilibili.com/video/BV1Y5411a74Z/
 
 ## 作业
 
