--- a/零基础入门旷视天元MegEngine/3.模型构建和训练进阶 I：分类问题.md
+++ b/零基础入门旷视天元MegEngine/3.模型构建和训练进阶 I：分类问题.md
@@ -10,11 +10,11 @@
 
 ## PPT地址
 
-[3.模型构建和训练进阶 I：分类问题.pptx](./PPT合集/3.模型构建和训练进阶 I：分类问题.pptx)
+[3.模型构建和训练进阶 I：分类问题.pptx](./PPT合集/3.模型构建和训练进阶%20I：分类问题.pptx)
 
 ## 视频地址
 
-待补充
+https://www.bilibili.com/video/BV1oi4y1u73B
 
 ## 作业
 **使用MegEngine训练一个MNIST分类网络<br/>**
