--- a/零基础入门旷视天元MegEngine/1.旷视天元MegEngine介绍和快速上手.md
+++ b/零基础入门旷视天元MegEngine/1.旷视天元MegEngine介绍和快速上手.md
@@ -12,7 +12,7 @@
 
 ## PPT地址
 
-[1.旷视天元MegEngine介绍和快速上手.pptx](./PPT合集/1.旷视天元MegEngine介绍和快速上手.pptx)
+[1.旷视天元MegEngine介绍和快速上手.pptx](./slides/1.旷视天元MegEngine介绍和快速上手.pptx)
 
 ## 视频地址
 
