--- a/零基础入门旷视天元MegEngine/2.模型构建和训练入门.md
+++ b/零基础入门旷视天元MegEngine/2.模型构建和训练入门.md
@@ -12,8 +12,8 @@
 
 ## PPT地址
 
-[2.模型构建和训练入门课件.pdf](./PPT合集/2.模型构建和训练入门课件.pdf)<br/>
-[2.模型构建和训练入门.ipynb](./PPT合集/2.模型构建和训练入门.ipynb)
+[2.模型构建和训练入门课件.pdf](./slides/2.模型构建和训练入门课件.pdf)<br/>
+[2.模型构建和训练入门.ipynb](./notebooks/2.模型构建和训练入门.ipynb)
 
 ## 视频地址
 
