--- a/零基础入门旷视天元MegEngine/3.模型构建和训练进阶 I：分类问题.md
+++ b/零基础入门旷视天元MegEngine/3.模型构建和训练进阶 I：分类问题.md
@@ -10,7 +10,12 @@
 
 ## PPT地址
 
-[3.模型构建和训练进阶 I：分类问题.pptx](./PPT合集/3.模型构建和训练进阶%20I：分类问题.pptx)
+[3.模型构建和训练进阶 I：分类问题.pptx](./slides/3.模型构建和训练进阶%20I：分类问题.pptx)<br/>
+[3.模型构建和训练进阶 I：分类问题1.ipynb](./notebooks/3.模型构建和训练进阶%20I：分类问题1.ipynb)<br/>
+[3.模型构建和训练进阶 I：分类问题2.ipynb](./notebooks/3.模型构建和训练进阶%20I：分类问题2.ipynb)<br/>
+[3.模型构建和训练进阶 I：分类问题3.ipynb](./notebooks/3.模型构建和训练进阶%20I：分类问题3.ipynb)<br/>
+[3.模型构建和训练进阶 I：分类问题4.ipynb](./notebooks/3.模型构建和训练进阶%20I：分类问题4.ipynb)<br/>
+
 
 ## 视频地址
 
