--- a/零基础入门旷视天元MegEngine/4.模型构建和训练进阶 II：物体检测.md
+++ b/零基础入门旷视天元MegEngine/4.模型构建和训练进阶 II：物体检测.md
@@ -8,7 +8,7 @@
 
 ## 资料
 
-[4.模型构建和训练进阶 II：物体检测(anchor).ipynb](./notebooks/4.模型构建和训练进阶%20II：物体检测(anchor).ipynb.ipynb)<br/>
+[4.模型构建和训练进阶 II：物体检测(anchor).ipynb](./notebooks/4.模型构建和训练进阶%20II：物体检测(anchor).ipynb)<br/>
 [4.模型构建和训练进阶 II：物体检测(nms).ipynb](./notebooks/4.模型构建和训练进阶%20II：物体检测(nms).ipynb)<br/>
 [4.模型构建和训练进阶 II：物体检测(transform_pipeline).ipynb](./notebooks/4.模型构建和训练进阶%20II：物体检测(transform_pipeline).ipynb)<br/>
 
