--- a/零基础入门旷视天元MegEngine/4.模型构建和训练进阶 II：物体检测.md
+++ b/零基础入门旷视天元MegEngine/4.模型构建和训练进阶 II：物体检测.md
@@ -7,7 +7,7 @@
 本节课程中，我们将学习通用物体检测的方法和流程，并且我们将以Faster-RCNN为例讲述旷视天元MegEngine是如何实现通用物体检测的Pipeline的。其中包括数据准备，模型搭建，训练测试，还有节省显存的大杀器sublinear memory等内容。
 
 ## 资料
-
+[4.模型构建和训练进阶 II：物体检测.pdf](./slides/4.模型构建和训练进阶%20II：物体检测.pdf)<br/>
 [4.模型构建和训练进阶 II：物体检测(anchor).ipynb](./notebooks/4.模型构建和训练进阶%20II：物体检测(anchor).ipynb)<br/>
 [4.模型构建和训练进阶 II：物体检测(nms).ipynb](./notebooks/4.模型构建和训练进阶%20II：物体检测(nms).ipynb)<br/>
 [4.模型构建和训练进阶 II：物体检测(transform_pipeline).ipynb](./notebooks/4.模型构建和训练进阶%20II：物体检测(transform_pipeline).ipynb)<br/>
