Update 5. Android 移动端模型推理部署.md

--- a/零基础入门旷视天元MegEngine/5. Android 移动端模型推理部署.md
+++ b/零基础入门旷视天元MegEngine/5. Android 移动端模型推理部署.md
@@ -11,8 +11,8 @@ Android 移动端模型推理部署
 - Android Camera预览实时推理。<br/>
 
 ## 资料
-[5. Android 移动端模型推理部署.pdf](./slides/5.%20Android%20移动端模型推理部署.pdf)<br/>
-[5. Android 移动端模型推理部署.zip](./notebooks/5.%20Android%20移动端模型推理部署.zip)<br/>
+课件：[5. Android 移动端模型推理部署.pdf](./slides/5.%20Android%20移动端模型推理部署.pdf)<br/>
+code：[5. Android 移动端模型推理部署.zip](./notebooks/5.%20Android%20移动端模型推理部署.zip)<br/>
 
 ## 视频地址
 https://www.bilibili.com/video/BV1ek4y127sP
