--- a/零基础入门旷视天元MegEngine/6.部署进阶：推理端优化.md
+++ b/零基础入门旷视天元MegEngine/6.部署进阶：推理端优化.md
@@ -11,7 +11,7 @@
 3. 实例讲解<br/>
 
 ## 资料
-课件：[6.部署进阶：推理端优化.pdf](./slides/6.部署进阶：推理端优化署.pdf)<br/>
+课件：[6.部署进阶：推理端优化.pdf](./slides/6.部署进阶：推理端优化.pdf)<br/>
 code：[6.部署进阶：推理端优化.ipynb](./notebooks/6.部署进阶：推理端优化.ipynb)<br/>
 
 ## 视频地址
