--- a/零基础入门旷视天元MegEngine/6.部署进阶：推理端优化.md
+++ b/零基础入门旷视天元MegEngine/6.部署进阶：推理端优化.md
@@ -12,10 +12,10 @@
 
 ## 资料
 课件：[6.部署进阶：推理端优化.pdf](./slides/6.部署进阶：推理端优化.pdf)<br/>
-code：[6.部署进阶：推理端优化.ipynb](./notebooks/6.部署进阶：推理端优化.ipynb)<br/>
+code：[6.部署进阶：推理端优化.zip](./notebooks/6.部署进阶：推理端优化.zip)<br/>
 
 ## 视频地址
-https://www.bilibili.com/video/BV1uy4y1y7S6
+https://www.bilibili.com/video/BV1Zf4y1Q7aZ?p=6
 
 ## 作业
 
