--- a/零基础入门旷视天元MegEngine/6.部署进阶：推理端优化.md
+++ b/零基础入门旷视天元MegEngine/6.部署进阶：推理端优化.md
@@ -22,6 +22,7 @@ https://www.bilibili.com/video/BV1Zf4y1Q7aZ?p=6
 - 了解MegEngine框架下量化原理<br/>
 - 利用MegEngine框架修改Shufflenet_v2模型为可量化模型<br/>
 - 使用train.py、finetune.py 和inference.py 验证量化模型是否修改成功。<br/>
+- 数据集地址：https://studio.brainpp.com/data-set/1433
 
 ### 如何提交
 
